<resources>
    <!--    <string name="app_name">BSW_FirstTask</string>-->
    <string name="splash_screen">Splash Screen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="game_over">Game Over</string>
    <string name="score">Score</string>
    <string name="_124">124</string>
    <string name="return_to_main_menu">Return to Main Menu</string>
    <string name="replay">Replay</string>
    <string name="best">Best</string>
    <string name="save_game">Do you want to save this game?</string>
    <string name="continue_game">Continue with the saved game?</string>
    <string name="tap_the_grey_color">Tap the GREY Color</string>
    <string name="change_language">Change Language</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="mail_us">Mail Us</string>
    <string name="exit">Are you sure want to exit?</string>
    <string name="title_feature">Module Title</string>
    <string name="i_m_d_chitty">I\'m %d Chitty</string>
    <string name="d_hello_world">%d Hello World</string>
</resources>
