<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:splitMotionEvents="false">

    <RelativeLayout
        android:padding="@dimen/_8sdp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/game_over"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_over"
            android:textColor="@color/blue_gray"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_16sdp"
            android:textSize="@dimen/_40ssp"/>

        <View
            android:id="@+id/view"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_below="@id/game_over"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/level_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/view"
            android:layout_centerHorizontal="true"
            android:text="@string/score"
            android:layout_marginTop="@dimen/_8sdp"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/_24ssp"/>

        <TextView
            android:id="@+id/points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/blue_gray"
            android:padding="@dimen/padding_box"
            android:textColor="@color/yellow"
            android:layout_below="@id/level_indicator"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/_40ssp" />

        <View
            android:id="@+id/view2"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:layout_below="@id/points"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:orientation="vertical"
            android:layout_below="@id/view2"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/padding_box">

            <TextView
                android:id="@+id/best_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/best"
                android:textSize="@dimen/_24ssp"
                android:textColor="@color/blue_gray" />

            <TextView
                android:id="@+id/best"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/red"
                android:textSize="@dimen/_40ssp" />
        </LinearLayout>

        <Button
            android:id="@+id/home_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout"
            android:background="@drawable/replay_button"
            android:text="@string/return_to_main_menu"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_16sdp"
            android:textSize="@dimen/_12ssp" />

        <Button
            android:id="@+id/replay_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/home_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/replay_button"
            android:text="@string/replay"
            android:textSize="@dimen/_12ssp" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/progress_indicator_game_over"
        android:background="@color/black"
        android:alpha=".6"
        android:visibility="gone"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
